--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
+    <link rel="stylesheet" href="./style.css">
+
+    <title>Screen testing</title>
   </head>
   <body>
-    <canvas width="800" height="600">
-        
+    <canvas width="800" height="600" id="main">
+            
     </canvas>
+    <div class="buttons">
+        <button id="clear">Clear</button>
+        <button id="previous">Previous</button>
+        <button id="next" >Next</button>
+        <button id="close">EXIT</button>
+
+
+    </div>
   </body>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="./renderer.js"></script> 
 </html>
