Moved tests to a file, made it dynamic

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <button id="previous">Previous</button>
         <button id="next" >Next</button>
         <button id="close">EXIT</button>
-
+        <p id="testNum"></p>
 
     </div>
   </body>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
   <script src="./renderer.js"></script> 
 </html>
