Added dynamic brush and scale control

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="clear">Clear</button>
         <button id="previous">Previous</button>
         <button id="next" >Next</button>
+        <button id="incBrush">Brush 1px</button>
         <button id="close">EXIT</button>
         <p id="testNum"></p>
 
