readme and some small fixes

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
             
     </canvas>
     <div class="buttons">
-        <button id="clear">Clear</button>
-        <button id="previous">Previous</button>
-        <button id="next" >Next</button>
-        <button id="incBrush">Brush 1px</button>
-        <button id="close">EXIT</button>
-        <p id="testNum"></p>
-
+        <div id="buttons">
+            <button id="clear">Clear</button>
+            <button id="previous">Previous</button>
+            <button id="next" >Next</button>
+            <button id="incBrush">Brush</button>
+            <button id="close">EXIT</button>
+            <p id="testNum">1</p>
+        </div>
     </div>
   </body>
   <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
